fix(composer-buttons): Fix broken icons on overflow, make buttons wrap

--- a/static/components/popover.less
+++ b/static/components/popover.less
@@ -4,6 +4,7 @@
 .popover-container {
   display:inline-block;
   position:relative;
+  white-space: nowrap; // prevent dropdown arrow from wrapping when space constrained
 }
 
 .popover {
